# CommonGround

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json
apps/api/: Dockerfile  alembic.ini  commonground-test.db  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260410_0001_initial.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: api.py
apps/api/app/api/v1/endpoints/: audit.py  auth.py  evaluations.py  feedback.py  insights.py  prompts.py  query.py  settings.py  sources.py  traces.py  workspaces.py
apps/api/app/core/: config.py  logging.py  security.py  telemetry.py
apps/api/app/db/: init_db.py  session.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/schemas/: audit.py  auth.py  evaluation.py  feedback.py  insights.py  prompt.py  query.py  settings.py  source.py  workspace.py
apps/api/app/scripts/: seed.py
apps/api/app/services/: audit.py  chunking.py  embeddings.py  evaluation.py  ingestion.py  insights.py  parsing.py  query_runner.py  rag.py  retrieval.py  storage.py
apps/api/app/worker/: main.py  tasks.py
apps/api/apps/api/storage-test/8cbc182a-2909-435c-bdbc-af208e571b3f/72d07bb96fde4b72ae85aa0fa29a4e494a057db0dbd660c0a036fd193e961dfc/: survey.txt
apps/api/tests/: conftest.py  test_auth_workspace.py  test_prompt_eval.py  test_source_query_flow.py
docs/: api-reference.md  architecture-overview.md  deployment-guide.md  env-template.md  future-roadmap.md  implementation-plan.md  (+5 more)
(+36 files in other folders)
